@startuml erd

entity User {
    id BIGINT UNSIGNED <<PK>>
    firstName VARCHAR(255)
    lastName VARCHAR(255)
    birthdate DATE
    email VARCHAR(255) <<UK>>
    language_preference ENUM('en', 'pt_BR')
    index_view_preference ENUM('cards', 'table')
    password VARCHAR(255)
    isAdmin BOOLEAN
    created_at DATE
    updated_at DATE
    --
}

entity Transaction {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    bill_id BIGINT UNSIGNED <<FK>> <<UK>>
    transaction_category_id BIGINT UNSIGNED <<FK>>
    amount DECIMAL(11, 2)
    type ENUM('income', 'expense')
    title VARCHAR(255)
    description TEXT
    created_at DATE
    updated_at DATE
    --
}

entity Bill {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    title VARCHAR(255)
    description TEXT
    amount DECIMAL(11, 2)
    due_date DATE
    status ENUM('pending', 'paid', 'overdue')
    paid_at DATE
    created_at DATE
    updated_at DATE
    --
}

entity Notification {
    id UUID <<PK>>
    type VARCHAR(255)
    notifiable_id BIGINT UNSIGNED <<FK>>
    notifiable_type VARCHAR(255)
    data TEXT
    read_at DATE
    created_at DATE
    updated_at DATE
    --
}

entity AvailableNotification {
    id BIGINT UNSIGNED <<PK>>
    name VARCHAR(255)
    --
}

entity NotificationChannel {
    id TINYINT UNSIGNED <<PK>>
    name VARCHAR(255)
    slug VARCHAR(255) <<UK>>
    --
}

entity Task {
    id BIGINT UNSIGNED <<PK>>
    user_id BIGINT UNSIGNED <<FK>>
    task_category_id BIGINT UNSIGNED <<FK>>
    title VARCHAR(255)
    description TEXT
    due_date DATE
    status ENUM('pending', 'completed', 'failed')
    created_at DATE
    updated_at DATE
    --
}

entity TransactionCategory {
    id BIGINT UNSIGNED <<PK>>
    name VARCHAR(255)
    transaction_type ENUM('income', 'expense')
    created_at DATE
    updated_at DATE
    --
}

entity TaskCategory {
    id BIGINT UNSIGNED <<PK>>
    name VARCHAR(255)
    created_at DATE
    updated_at DATE
    --
}


User ||--o{ Transaction
User ||--o{ Bill
Bill ||--o{ Notification
Task ||--o{ Notification
User ||--o{ Task
User }o--o{ AvailableNotification
User }o--o{ NotificationChannel
TaskCategory ||--o{ Task
TransactionCategory ||--o{ Transaction
Bill |o--|| Transaction

@enduml
